# scrapper-portal-conservador

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cbrs/: account_pool.py  account_pool_dashboard.py  browser_runtime.py  browser_session.py  cli.py  client.py  cloak.py  config.py  login_debug.py  pdf.py  preflight.py  proxy.py  proxy_health.py  recaptcha.py  safety.py  scraper.py  scraper_http.py  session.py  soak.py  soak_dashboard.py  validation.py
docs/: architecture.md  fixed-trust-runtime.md  soak-testing.md  validation-plan.md
docs/research/: 01-cbrs-portal-facts.md  02-platform-limitations.md  03-current-system-features.md  04-caveats-and-risk-signals.md  05-long-term-options.md  README.md  sources.md
research/cbrs-network/: direct-api-result-summary.json  endpoint-analysis.md  live-probe-summary.json  spa-surface-map.json  static-api-endpoints.json  static-bundle-endpoints.json
research/cbrs-network/static-assets/: asset-index.json
research/tools/: live-cbrs-probes.js  map-cbrs-bundle.js
src/cbrs_portal/: __init__.py  artifacts.py  browser_session.py  cli.py  config.py  errors.py  jobs.py  logging_utils.py  portal_client.py  safety.py
tests/: test_account_pool.py  test_artifacts.py  test_browser_runtime.py  test_browser_session.py  test_cli.py  test_cli_args.py  test_cloak.py  test_config.py  test_doctor.py  test_errors.py  test_jobs.py  test_outputs_folder.py  test_pdf.py  test_preflight.py  test_proxy.py  test_proxy_health.py  test_safety.py  test_scraper.py  test_soak.py  test_validation.py
(+4 files in other folders)
