[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper-portal-conservador"
version = "0.1.0"
description = "Production-grade local CBRS nuevo portal worker for Comercio index flows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "curl_cffi>=0.7.0",
  "playwright>=1.45.0",
  "python-dotenv>=1.0.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
cbrs = "cbrs_portal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
